EXTRA_DIST = test_constructors.py  test_extensions.py test_hfst_basic_transducer.py \
	test_lexc.lexc test_rules.py test_std_streams.py test_streams.py \
	test_transducer_functions.py test_examples.py test_flag_diacritics.py \
	test_lexc_fail.lexc test_lexc.py test.sh test_std_streams.sh \
	test_tokenizer.py  test_xre_compiler.py
